fixed item widths on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -164,6 +164,10 @@ a>span {
 	.desktop {
 		display: none;
 	}
+
+	.grid > div {
+		width: 100%;
+	}
 }
 
 .item {
